// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`license license-closed-source 1`] = `
Array [
  package.json,
]
`;

exports[`license license-open-source 1`] = `
Array [
  LICENSE,
  package.json,
]
`;
